# simple_3d_curves

./: LICENSE  README.md
src/: CMakeLists.txt  Makefile  main.cc
src/header/: circle.h  curve.h  ellipse.h  helix.h
src/source/: circle.cc  ellipse.cc  helix.cc
